<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Thermospy</string>
    <string name="title_section1">Thermospy</string>
    <string name="title_section2">Setup</string>
    <string name="title_section3">Temperature Log</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ip_address">IP Address</string>
    <string name="port">Port</string>
    <string name="default_ip_address">IP Address</string>
    <string name="default_port">Port</string>
    <string name="connect_server">Start</string>
    <string name="server_details">Server setup</string>
    <string name="btn_bounds_ok">Apply</string>
    <string name="btn_bounds_abort">Abort</string>
    <string name="confirm_temperature">Is temperature correct?</string>
    <string name="yes">Confirm</string>
    <string name="no">Cancel</string>
    <string name="status">Status</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="control">Control</string>
    <string name="set">Set</string>
    <string name="clear">Clear</string>
    <string name="alarm">Alarm</string>
    <string name="enable_alarm">Alarm enabled</string>
    <string name="disable_alarm">Alarm disabled</string>
    <string name="current_temperature">Current temperature</string>
    <string name="lost_connection">Lost contact with the server!</string>
    <string name="setup_aborted">Setup aborted!</string>
    <string name="setup_server_failed">Could not communicate with Server!</string>
    <string name="please_wait">Please wait</string>
    <string name="progress_fetching_temperature">Fetching temperature...</string>
    <string name="progress_starting_service">Starting thermospy service...</string>
    <string name="progress_fetching_image">Fetching image from camera...</string>
    <string name="running">running</string>
    <string name="not_running">not running</string>
    <string name="start_server">Start mServerSettings</string>
    <string name="stop_server">Stop mServerSettings</string>
    <string name="enabled">enabled</string>
    <string name="not_enabled">not enabled</string>
    <string name="temperature">Temperature</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="gt_or_equal">Greater than or equal to alarm</string>
    <string name="lt_or_equal">Lesser than or equal to alarm</string>
    <string name="pref_summary_degree_type">Choose temperature scale</string>
    <string name="pref_title_degree_type">Temperature scale</string>
    <string name="pref_summary_refresh_interval">Specify the time between temperature updates</string>
    <string name="pref_title_refresh_interval">Refresh rate</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pref_title_choose_degree_type">Choose degree scale</string>
    <string name="temperature_scale_celsius">°C</string>
    <string name="temperature_scale_fahrenheit">°F</string>
    <string name="title_activity_log_session">LogSessionActivity</string>

    <string name="temperature_log">Temperature Log</string>
    <string name="start_recording">Start logging temperature</string>
    <string name="stop_recording">Stop logging temperature</string>
    <string name="title_activity_new_temperature_log">New Temperature Log</string>
    <string name="form_log_session_name">Log Name</string>
    <string name="form_food_type">Food Type</string>
    <string name="form_cut_type">Cut Type</string>
    <string name="form_weight">Weight</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="form_target_temperature">Target temperature</string>
    <string name="start_log_session">Start Log Session</string>
    <string name="pref_aspect_ratio_summary">Specify the aspect ratio that will be used when cropping the images</string>
    <string name="pref_title_aspect_ratio">Aspect ratio</string>
    <string name="pref_key_aspect_ratio">pref_key_aspect_ratio</string>
    <string name="pref_key_refresh_interval">pref_key_refresh_interval</string>
    <string name="pref_key_temperature_degree">pref_key_temperature_degree</string>
    <string name="pref_key_timeformat">pref_key_timeformat</string>
    <string name="pref_key_dateformat">pref_key_dateformat</string>
    <string name="invalid_target_temperature">Invalid target temperature!</string>
    <string name="invalid_logname">Please specify a log name!</string>
    <string name="pref_timeformat_summary"></string>
    <string name="pref_title_timeformat">Specify time format</string>
    <string name="pref_dateformat_summary"></string>
    <string name="pref_title_dateformat">Specify date format</string>
    <string name="wait_log_session_update">Updating log session...</string>
    <string name="failed_to_update_logsession">Sorry but the log session could not be updated.</string>

    <color name="white">#FFFFFF</color>

    <string name="title_activity_line_graph">LineGraphActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="control_server">Server control</string>
    <string name="not_available_no_connection">Not available - please connect to server!</string>

</resources>
