<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference

        android:key="@string/pref_key_temperature_degree"
        android:summary="@string/pref_summary_degree_type"
        android:title="@string/pref_title_degree_type"


        android:defaultValue="1"
        android:entries="@array/degree_scales"
        android:entryValues="@array/degree_scale_values"/>
    <EditTextPreference
        android:key="@string/pref_key_refresh_interval"
        android:summary="@string/pref_summary_refresh_interval"
        android:title="@string/pref_title_refresh_interval"
        android:inputType="number"
        android:defaultValue="5"/>
    <ListPreference

    android:key="@string/pref_key_aspect_ratio"
    android:summary="@string/pref_aspect_ratio_summary"
    android:title="@string/pref_title_aspect_ratio"


    android:defaultValue="1"
        android:entries="@array/aspect_ratios"
        android:entryValues="@array/aspect_ratio_values"/>

    <ListPreference

        android:key="@string/pref_key_timeformat"
        android:summary="@string/pref_timeformat_summary"
        android:title="@string/pref_title_timeformat"


        android:defaultValue="1"
        android:entries="@array/timeformat"
        android:entryValues="@array/timeformat_values"/>

    <ListPreference

        android:key="@string/pref_key_dateformat"
        android:summary="@string/pref_dateformat_summary"
        android:title="@string/pref_title_dateformat"


        android:defaultValue="1"
        android:entries="@array/dateformat"
        android:entryValues="@array/dateformat"/>

</PreferenceScreen>

