<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.luan.thermospy.android.fragments.setup.SetupService">

    <!-- TODO: Update blank fragment layout -->

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ip_address"
            android:id="@+id/txtViewIP"
            android:layout_column="20" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTxtIP"
            android:layout_column="21"
            android:layout_marginLeft="10dp" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/port"
            android:id="@+id/txtViewPort"
            android:layout_column="20" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTxtPort"
            android:layout_column="21"
            android:layout_marginLeft="10dp" />
    </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_server"
                android:id="@+id/btnConnect"
                android:layout_gravity="center|right"
                android:layout_column="21" />
        </TableRow>

    </TableLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="116dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginBottom="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/server_details"
            android:id="@+id/textViewSrvDetails"
            android:textStyle="bold"
            android:textSize="40dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</FrameLayout>
