<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.luan.thermospy.android.fragments.setup.SetupConfirm">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="196dp"
        android:layout_gravity="center"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="383dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/confirm_temperature"
                android:id="@+id/textViewQ"
                android:layout_gravity="center"
                android:textSize="28dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="00"
                android:id="@+id/txtViewTemperature"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:textSize="72dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.48">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:id="@+id/buttonRetry"
                android:layout_gravity="left|bottom" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reset bounds"
                android:id="@+id/buttonResetBounds"
                android:layout_gravity="bottom|right"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:id="@+id/buttonConfirm"
                android:layout_gravity="bottom" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
